# jarvis

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  install.sh
.claude/: settings.local.json
.github/workflows/: build-native.yml  build.yml  release-native.yml  release.yml
package/: metadata.json
package/contents/config/: config.qml
package/contents/ui/: configAbout.qml  configAudio.qml  configChat.qml  configCommands.qml  configGeneral.qml  configVoice.qml  main.qml
packaging/arch/: PKGBUILD
packaging/debian/: changelog  control  copyright  install  rules
packaging/fedora/: jarvis.spec
src/plugin/: CMakeLists.txt  jarvisbackend.cpp  jarvisbackend.h  jarvisplugin.cpp
src/plugin/audio/: jarvisaudio.cpp  jarvisaudio.h  micmonitor.cpp  micmonitor.h  pwcapture.cpp  pwcapture.h  pwplayback.cpp  pwplayback.h
src/plugin/commands/: jarviscommands.cpp
src/plugin/mcp/: jarvismcp.cpp  jarvismcp.h
src/plugin/rag/: jarvisrag.cpp  jarvisrag.h
src/plugin/settings/: jarvisoauth.cpp  jarvisoauth.h  jarvissettings.cpp  jarvissettings.h
src/plugin/tts/: jarvisTts.cpp  jarvisTts.h
